<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/root_layout" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<FrameLayout android:id="@+id/full_screen_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent" android:visibility="gone" />

	<FrameLayout android:id="@+id/video_frame"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone">

		<SurfaceView android:id="@+id/video_surface" android:layout_width="match_parent"
			android:layout_height="match_parent"/>

		<FrameLayout android:id="@+id/video_controller"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom" android:background="@color/bg">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center" android:orientation="vertical">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center" android:orientation="horizontal">

					<ImageButton android:id="@+id/previous_button" android:minHeight="75dp"
						android:layout_width="0dp" android:layout_height="wrap_content"
						android:layout_gravity="center" android:layout_weight="1"
						android:background="@drawable/button" style="@style/ToolbarButton"
						android:src="@drawable/ic_previous" android:text="@string/previous" />

					<ImageButton android:id="@+id/play_button" android:minHeight="85dp"
						android:layout_width="0dp" android:layout_height="wrap_content"
						android:layout_gravity="center" android:layout_weight="1"
						android:background="@drawable/button" style="@style/ToolbarButton"
						android:src="@drawable/ic_play" android:text="@string/play_pause" />

					<ImageButton android:id="@+id/next_button" android:minHeight="75dp"
						android:layout_width="0dp" android:layout_height="wrap_content"
						android:layout_gravity="center" android:layout_weight="1"
						android:background="@drawable/button" style="@style/ToolbarButton"
						android:src="@drawable/ic_next" android:text="@string/next" />

				</LinearLayout>

				<SeekBar android:id="@+id/seek_bar" android:progressTint="@color/text_active"
					android:thumbTint="@color/text_active"
					android:layout_width="match_parent" android:layout_height="24dp" />

			</LinearLayout>

		</FrameLayout>

	</FrameLayout>

	<LinearLayout android:id="@+id/container"
		android:layout_width="match_parent"
		android:layout_height="match_parent" android:orientation="vertical">

		<LinearLayout  android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:background="@color/bg"
				android:gravity="center" android:orientation="horizontal">

				<ImageButton android:id="@+id/back_button"
					android:layout_width="0dp" android:layout_height="wrap_content"
					android:layout_gravity="center" android:layout_weight="1"
					android:background="@drawable/button" style="@style/ToolbarButton"
					android:src="@drawable/ic_back" android:text="@string/back" />

				<ImageButton android:id="@+id/home_button"
					android:layout_width="0dp" android:layout_height="wrap_content"
					android:layout_gravity="center" android:layout_weight="1"
					android:background="@drawable/button" style="@style/ToolbarButton"
					android:src="@drawable/ic_home" android:text="@string/home" />

				<ImageButton android:id="@+id/refresh_button"
					android:layout_width="0dp" android:layout_height="wrap_content"
					android:layout_gravity="center" android:layout_weight="1"
					android:background="@drawable/button" style="@style/ToolbarButton"
					android:src="@drawable/ic_refresh"
					android:text="@string/refresh_page" />

				<ImageButton android:id="@+id/search_button"
					android:layout_width="0dp" android:layout_height="wrap_content"
					android:layout_weight="1" android:background="@drawable/button"
					style="@style/ToolbarButton" android:src="@drawable/ic_search"
					android:text="@string/search" />

				<ImageButton android:id="@+id/fullscreen_button"
					android:layout_width="0dp" android:layout_height="wrap_content"
					android:layout_weight="1" android:background="@drawable/button"
					style="@style/ToolbarButton" android:src="@drawable/ic_fullscreen"
					android:text="@string/fullscreen" />

				<ImageButton android:id="@+id/files_button"
					android:layout_width="0dp" android:layout_height="wrap_content"
					android:layout_weight="1" android:background="@drawable/button"
					style="@style/ToolbarButton" android:src="@drawable/ic_folder"
					android:text="@string/browse_files" />

				<ImageButton android:id="@+id/settings_button"
					android:layout_width="0dp" android:layout_height="wrap_content"
					android:layout_weight="1" android:background="@drawable/button"
					style="@style/ToolbarButton" android:src="@drawable/ic_more"
					android:text="@string/settings" />

			</LinearLayout>

			<LinearLayout android:id="@+id/toolbar_search"
				android:visibility="gone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:background="@color/bg"
				android:gravity="center" android:orientation="vertical">

				<com.pijulius.youtubeauto.AutoEditText
					android:id="@+id/search_for" style="@android:style/TextAppearance.Large"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:imeOptions="actionDone" />

			</LinearLayout>

		</LinearLayout>

		<FrameLayout android:id="@+id/web_frame"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<com.pijulius.youtubeauto.VideoWebView
				android:id="@+id/web_view" android:layout_width="match_parent"
				android:layout_height="match_parent" android:focusable="true"
				android:focusableInTouchMode="true" />

			<ProgressBar android:id="@+id/progress_bar"
				style="?android:attr/progressBarStyleHorizontal"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" android:layout_gravity="top"
				android:indeterminate="true"
				android:indeterminateTintMode="src_atop"
				android:indeterminateTint="@color/text_active" />

		</FrameLayout>

		<FrameLayout android:id="@+id/files_frame"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:visibility="gone">

			<com.pijulius.youtubeauto.VideoFilesView
				android:id="@+id/files_view" android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:listSelector="@drawable/button" android:numColumns="auto_fit"
				android:columnWidth="200dp" android:verticalSpacing="10dp"
				android:horizontalSpacing="10dp" />

		</FrameLayout>

	</LinearLayout>

</FrameLayout>